--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@astrojs/rss": "^2.1.0",
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/vercel": "^3.0.1",
+    "astro": "^2.3.3",
+    "astro-imagetools": "^0.8.1",
+    "photoswipe": "^5.3.7",
     "preact": "^10.6.5",
     "tailwindcss": "^3.0.24"
   },
