--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/vercel": "^3.0.1",
     "astro": "^2.3.3",
+    "astro-icon": "^0.8.0",
     "astro-imagetools": "^0.8.1",
     "photoswipe": "^5.3.7",
     "preact": "^10.6.5",
