--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0"
   }
